midd-stories: fix scrollbar issue with the header

--- a/src/scss/components/_site-header.scss
+++ b/src/scss/components/_site-header.scss
@@ -25,6 +25,10 @@
   &.headroom--unpinned {
     transform: translateY(-100%);
   }
+
+  body.has-toggled-elem &.headroom--unpinned {
+    transform: translateY(0%);
+  }
 }
 
 .site-header__logo {
